BUG : Correct a bug with disalignment os buttons in checkout review page. BUG : Correct a bug with loading products twice when there are products already loaded. ENH : Set nowrap in product cart price line.

--- a/src/app/home/checkout/review/styles.styl
+++ b/src/app/home/checkout/review/styles.styl
@@ -38,6 +38,10 @@ button + button
     padding-left: 20px;
     padding-top: 40px;
 
+.table
+    td:not(.name-cell)
+        white-space: nowrap;
+
 .checkout-box
     padding: 15px;
     border: 5px solid #f1f1f1;
