--- a/src/common/product/card/styles.styl
+++ b/src/common/product/card/styles.styl
@@ -46,6 +46,7 @@
     .price
         padding: 0 30px;
         margin-bottom: 3pt;
+        white-space: nowrap;
         
         .price-value
             font-weight: 800;
